--- a/index.html
+++ b/index.html
@@ -8,16 +8,6 @@
   <meta name="author" content=" FILL ME IN ">
   <title>Cameron Pittman: Portfolio</title>
 
-  <!-- Hmm, what is the impact of web fonts on speed? Measure it... -->
-
-  <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
-  <script type="text/javascript">
-    WebFont.load({
-      google: {
-        families: ['Open Sans:400,700'],
-      }
-    });
-  </script>
   <style media="screen">
     /* Smartphones (portrait) */
 
@@ -34,7 +24,6 @@
     }
   </style>
   <!--- Specify the media  !--->
-  <link href="css/style.css" rel="stylesheet" media="screen">
   <link href="css/print.css" rel="stylesheet" media="print">
 
 
@@ -90,7 +79,7 @@
 
         <li>
           <!--- change the image size !--->
-          <img style="width: 100px;" src="img/pizzeria-thum.jpg">
+          <img style="width: 100px; height:75px" src="img/pizzeria-thum.jpg">
           <a href="views/pizza.html">Cam's Pizzeria</a>
           <p>Who wants a performant pizza?</p>
         </li>
@@ -101,6 +90,14 @@
       <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
     </footer>
   </div>
+  <script src="http://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js"></script>
+  <script type="text/javascript">
+    WebFont.load({
+      google: {
+        families: ['Open Sans:400,700'],
+      }
+    });
+  </script>
 </body>
 
 </html>
